removed likeness of event name with namespaced events. Namespacing events is not supported.

--- a/pages/web-components/feedback-list.html
+++ b/pages/web-components/feedback-list.html
@@ -31,7 +31,7 @@
                     });
 
                     // Show an error when something happens
-                    element.addEventListener('entity:validation-error', (e) => {
+                    element.addEventListener('validation-error', (e) => {
                         const errorMessage = e.detail;
                         // Send the actual message
                         this.feedbackEmitter(errorMessage, 'Validation Error', 'alert-danger');
