--- a/pages/web-components/container.html
+++ b/pages/web-components/container.html
@@ -76,7 +76,7 @@
                         }
                     }
                     ]
-                    controller.receive("needMenuItems", function (evt) {
+                    controller.on("needMenuItems", function (evt) {
                         evt.stopImmediatePropagation();
                         callback = evt.detail;
                         callback(null, menuItems)
@@ -123,7 +123,7 @@
                     }
                 }
                 ]
-                controller.receive("needMenuItems", function (evt) {
+                controller.on("needMenuItems", function (evt) {
                     evt.stopImmediatePropagation();
                     callback = evt.detail;
                     callback(null, menuItems)
