--- a/pages/Cardinal/controllers.html
+++ b/pages/Cardinal/controllers.html
@@ -50,7 +50,7 @@
                         // The variable "controller" is mandatory to be used like this, named controller.
                         // The method "receive" is defined in the default controller, and it adds and event listener to the container.
                         // If you do not extend the default controller, you will need to define your own functionalities
-                        controller.receive('clickOnSpecialProduct', function() {
+                        controller.on('clickOnSpecialProduct', function() {
                             // Define what should happen
                         });
                     </script>
@@ -95,16 +95,16 @@
     </psk-chapter>
 
     <psk-chapter title="API Definition - BindableController">
-        <psk-card class="api-title" title="controller.receive()">
-            <p>The function <code>receive</code> will listen for the event and when the event is triggered, the callback function given as parameter will be executed.</p>
+        <psk-card class="api-title" title="controller.on()">
+            <p>The function <code>on</code> will listen for the event and when the event is triggered, the callback function given as parameter will be executed.</p>
             <p>If a HTMLElement is provided, then the listener will be attached to it, otherwise it is attached to the container where the controller is attached.</p>
             <psk-card class="api-subtitle" title="Syntax">
-                <p>controller.receive(eventName: string, htmlElement: HTMLElement | Function, callback?: Function)</p>
+                <p>controller.on(eventName: string, htmlElement: HTMLElement | Function, callback?: Function)</p>
             </psk-card>
             <psk-card class="api-subtitle" title="Parameters">
                 <psk-list>
                     <span><strong>eventName</strong> <i>(mandatory)</i> - The name of the event that needs to be listened</span>
-                    <span><strong>htmlElement</strong> <i>(optional)</i> - On this element the event will be attached. Also, a callback function can be provided instead to allow the ussage of the function without providing null parameters. Instead of calling like <code>controller.receive(evName, null, function()...)</code> you can call it like <code>controller.receive(evName, function()...)</code>. If this parameter is a function, then this is the callback that will be executed when the event is captured.</span>
+                    <span><strong>htmlElement</strong> <i>(optional)</i> - On this element the event will be attached. Also, a callback function can be provided instead to allow the ussage of the function without providing null parameters. Instead of calling like <code>controller.on(evName, null, function()...)</code> you can call it like <code>controller.receive(evName, function()...)</code>. If this parameter is a function, then this is the callback that will be executed when the event is captured.</span>
                     <span><strong>callback</strong> <i>(optional)</i> - The function that will be executed when the event is captured.</span>
                 </psk-list>
             </psk-card>
