typos and rephrasing

--- a/pages/About/how-to-write-documentation-pages.html
+++ b/pages/About/how-to-write-documentation-pages.html
@@ -101,9 +101,9 @@
 	<psk-card title="Card / Sub-Section title"></psk-card>
 
 	<!-- These are the most used components in out web site.  -->
-	
+
 	<!-- Into the next chapter, all the developed components are listed using another compnent: psk-list -->
-	<psk-list list-type="unordered / ordered"></psk-list> 
+	<psk-list list-type="unordered / ordered"></psk-list>
 	<!-- Default is unordered (displayed with bullets) -->
 </psk-page>
 		</psk-code>
@@ -138,7 +138,7 @@
 				<psk-link page="web-components/wizard">Wizard</psk-link>
 			</psk-list>
 		</psk-chapter>
-		
+
 		<psk-chapter title="Form Components">
 			<p>The form components are ment to be used when you are creating a form, but they can also be used inside other pages
 				with the correct combination. E.g.: You can add somewhere in a page a psk-text-input to filter the information from
@@ -163,10 +163,10 @@
 				<psk-link page='forms/psk-text-input'>PSK text input</psk-link>
 			</psk-list>
 		</psk-chapter>
-		
+
 		<psk-chapter title="Documentation Components">
-			<p>The documentation componens can be found within section PSK Wiki. They are all used in writting these pages.</p>
-			<p>Check out each component documentation and examples to make an idea of how to use it.</p>
+			<p>Documentation of the components can be found in the PSK Wiki section. They are used to create pages like this.</p>
+			<p>Check out each component documentation and examples to see how to use it.</p>
 			<psk-list>
 				<psk-link page='psk-wiki/psk-card'>PSK card</psk-link>
 				<psk-link page='psk-wiki/psk-chapter'>PSK chapter</psk-link>
