--- a/pages/Cardinal/controllers.html
+++ b/pages/Cardinal/controllers.html
@@ -7,7 +7,7 @@
         <p>At this moment, the following ways of implementing a controller are available (we will get into detail in the chapters below):</p>
         <psk-list list-type="ordered">
             <span>By creating a javascript class inside <code>controller</code> folder of the application. This class needs to be registered. </span>
-            <span>By writting javascript code inside the tag <code>script</code>. This tag will be connected as controller only inside <psk-link page="web-components/container">psk-container</psk-link> and <psk-link page="forms/psk-form">psk-form</psk-link> components.</span>
+            <span>By writing javascript code inside the tag <code>script</code>. This tag will be connected as controller only inside <psk-link page="web-components/container">psk-container</psk-link> and <psk-link page="forms/psk-form">psk-form</psk-link> components.</span>
         </psk-list>
 
         <p>There is also a default controller that is available, which is named <code>"BindableController"</code>. Our suggestion is that when you want to create a controller, is to extend this already available controller.</p>
@@ -39,7 +39,7 @@
 				}
 			</psk-code>
         </psk-chapter>
-        <psk-chapter title="Create a controller by writting javascript source code">
+        <psk-chapter title="Create a controller by writing javascript source code">
             <p>Let's assume that you want to have displayed a list of sale products on a page, but for some of them you want a specific behavior, like triggering an event when a special product has been clicked. In order to do this, you can write some javascript
                 logic only for that product.</p>
             <p>The source code for that product will look something like the following one:</p>
@@ -88,7 +88,7 @@
 				</psk-code>
             </psk-chapter>
             <psk-chapter title="Loading a controller by defining Javascript source code">
-                <p>In the chapter above, <code>Create a controller by writting javascript source code</code>, we have described how to create a controller inside the HTML tag <code>script</code> and provided a small example of usage.</p>
+                <p>In the chapter above, <code>Create a controller by writing javascript source code</code>, we have described how to create a controller inside the HTML tag <code>script</code> and provided a small example of usage.</p>
                 <p>Here we have two cases, to provide a <code>controller-name</code> attribute or not. If we provide a controller, it will be verified and only if it exists, the <code>script</code> tag will be taken into consideration.</p>
                 <p>If the <code>controller-name</code> attribute is not provided, then <code>BindableController</code> will be attached to the container and the script defined will be executed.</p>
             </psk-chapter>
