--- a/pages/Cardinal/events.html
+++ b/pages/Cardinal/events.html
@@ -107,16 +107,16 @@
     <psk-chapter title="Handling events in psk-container component">
         <psk-chapter title="controller.on">
             <psk-description>
-                Check the Controllers documentation page about <a href="/?Cardinal/controllers&chapter=controller-on">controller.on</a>
+                Check the Controllers documentation page for <a href="/?Cardinal/controllers&chapter=controller-on">controller.on</a>.
             </psk-description>
         </psk-chapter>
 
         <psk-chapter title="controller.off">
-            Check the Controllers documentation page about <a href="/?Cardinal/controllers&chapter=controller-off">controller.off</a>
+            Check the Controllers documentation page for <a href="/?Cardinal/controllers&chapter=controller-off">controller.off</a>.
         </psk-chapter>
 
         <psk-chapter title="controller.send">
-            Check the Controllers documentation page about <a href="/?Cardinal/controllers&chapter=controller-send">controller.send</a>
+            Check the Controllers documentation page for <a href="/?Cardinal/controllers&chapter=controller-send">controller.send</a>.
         </psk-chapter>
     </psk-chapter>
 
