--- a/pages/Cardinal/controllers.html
+++ b/pages/Cardinal/controllers.html
@@ -28,7 +28,7 @@
 			<p>Also, in the folder structure, there are also a folder, <code>base-controllers</code>. It is very important that these controllers remain not changed, as we are under development and we will provide updates from time to time.</p>
             <p>After the creation of this class, you should extend the base controller named <code>BindableController</code>, like in the below example. If you chose not to extend the controller, then you will nt have to possibility to use the binding features.</p>
             <p>The base controller has already some functionalities provided, like triggering and listening to events, binding (one-way and two-way binding) and in the future we will bring other features.</p>
-            <p>The starting point of your class should look like the below one (the class <strong>MUST</strong> be created in the base path of controllers - <code>/src/scripts/controllers</code>)</p>
+            <p>The starting point of your class should look like the below one (the class <strong>must</strong> be created in the base path of controllers - <code>/src/scripts/controllers</code>)</p>
 			<psk-code language="Javascript">
 				import BindableController from "./base-controllers/BindableController.js";
 
